syntax = "proto3";

package main;
option go_package= "./proto";

service TestAPI {
  rpc Echo(ResponseRequest) returns (ResponseRequest) {}
  rpc GetUser(UserResponse) returns (UserResponse) {}
}

message ResponseRequest {
    string message = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
    string email = 3;
}